Bug 178823 - Selected icon theme is still selected after changing module inside Appearance and discarding changes
Summary: Selected icon theme is still selected after changing module inside Appearance...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_icons (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Marie Loise Nolden
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-26 18:48 UTC by Dario Andres
Modified: 2008-12-28 23:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch (396 bytes, application/octet-stream)
2008-12-28 22:42 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dario Andres 2008-12-26 18:48:52 UTC
Version:           KDE: 4.1.86 (KDE 4.1.86 (KDE 4.2 >= 20081221)) kdelibs svn rev. 901624 / kdebase svn rev. 901624 (using Devel)
Compiler:          gcc 
OS:                Linux
Installed from:    Compiled sources

Here using:
Qt: 4.4.3 + qt-copy-patches-889120
KDE: 4.1.86 (KDE 4.1.86 (KDE 4.2 >= 20081221))
kdelibs svn rev. 901624 / kdebase svn rev. 901624
on ArchLinux x86_64 - Kernel 2.6.27.10

You need to have more than one Icon Theme installed.

Steps to Reproduce:

- Open System Settings
- Go to Appearance
- Click on Icons module
(Your active icon theme (and selected) is Oxygen)
- Click on another icon theme on the list
- Now, go to another Appearance module (ex. Colors)
An "Unsaved Changes" window appears.
- Click "Discard" in the "Unsaved Changes" window
You are now in another Appearance module (ex. Colors)
- Click again in Icons module
The recently selected (but no active) icon theme is still selected.

Also, If you click on the active theme (ex. Oxygen), clicking to another Appearance module will bring up the "Unsaved Changes" window, however , no real changes have been made since the Oxygen icon theme is the active theme (I never changed the active theme in this example)
Comment 1 FiNeX 2008-12-26 18:57:58 UTC
I confirm this bug :-)

Thanks Dario!
Comment 2 Dario Andres 2008-12-28 22:42:33 UTC
Created attachment 29707 [details]
Proposed patch

Select the current icon them on the load function (called when leaving the widget too)
Comment 3 FiNeX 2008-12-28 23:44:30 UTC
SVN commit 902673 by finex:

Select correct icon theme on loading.
Patch by Dario Andres.

Tested and approved by me.

BUG: 178823



 M  +3 -0      iconthemes.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=902673