Select correct icon theme on loading. Patch by Dario Andres.

Tested and approved by me.

BUG: 178823


svn path=/trunk/KDE/kdebase/runtime/; revision=902673